--- a/Grocery App/Grocery App/Storyboards/Base.lproj/Main.storyboard
+++ b/Grocery App/Grocery App/Storyboards/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="uzq-sc-MWp">
             <objects>
-                <viewController id="Ika-0J-1fX" customClass="LoginViewController" customModule="Grocery_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LogInViewController" id="Ika-0J-1fX" customClass="LoginViewController" customModule="Grocery_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uLH-a4-s8r">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -74,6 +74,9 @@
                                                 <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="attemptLogin" destination="Ika-0J-1fX" eventType="touchUpInside" id="Xzv-Xm-7mo"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -93,6 +96,7 @@
                         <outlet property="stackViewBottomConstraint" destination="Pfr-ij-uwR" id="gCJ-fn-AEZ"/>
                         <outlet property="stayLoggedInSwitch" destination="pfC-Nd-Xyv" id="oTb-y0-5hH"/>
                         <outlet property="userNameTextField" destination="gTR-qE-2PL" id="rd2-lK-qLR"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="LoginToVC" id="l8q-cq-tpg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DNn-iI-diZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -102,7 +106,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Grocery_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Grocery_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -118,12 +122,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date_added" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAi-rZ-tlX">
-                                                    <rect key="frame" x="289.5" y="17" width="70.5" height="16"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="hzm-Mj-8kU">
                                                     <rect key="frame" x="31" y="7.5" width="83" height="35"/>
                                                     <subviews>
@@ -141,16 +139,35 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Uky-CA-pND">
+                                                    <rect key="frame" x="263.5" y="16" width="92.5" height="18"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="n-icon" translatesAutoresizingMaskIntoConstraints="NO" id="AiN-DE-vHe" userLabel="name-icon">
+                                                            <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="18" id="Egu-xu-pv1"/>
+                                                                <constraint firstAttribute="width" constant="18" id="khR-ml-gXP"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date_added" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAi-rZ-tlX">
+                                                            <rect key="frame" x="22" y="0.0" width="70.5" height="18"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="hzm-Mj-8kU" firstAttribute="leading" secondItem="4ZN-pH-zWR" secondAttribute="leadingMargin" constant="16" id="4uc-jk-SYK"/>
-                                                <constraint firstItem="iAi-rZ-tlX" firstAttribute="centerY" secondItem="4ZN-pH-zWR" secondAttribute="centerY" id="Bfe-aq-fTU"/>
                                                 <constraint firstItem="hzm-Mj-8kU" firstAttribute="centerY" secondItem="4ZN-pH-zWR" secondAttribute="centerY" id="Gvi-8X-YVO"/>
-                                                <constraint firstItem="iAi-rZ-tlX" firstAttribute="trailing" secondItem="4ZN-pH-zWR" secondAttribute="trailingMargin" id="oor-OB-At4"/>
+                                                <constraint firstItem="Uky-CA-pND" firstAttribute="centerY" secondItem="4ZN-pH-zWR" secondAttribute="centerY" id="ZqO-Ib-TPC"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Uky-CA-pND" secondAttribute="trailing" constant="4" id="aPR-Ff-34Z"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="dateLabel" destination="iAi-rZ-tlX" id="jC9-Go-f8t"/>
+                                            <outlet property="nameIconImageView" destination="AiN-DE-vHe" id="dis-SZ-FRv"/>
                                             <outlet property="nameLabel" destination="j8V-cl-HMU" id="kK9-LP-ErX"/>
                                             <outlet property="quantityLabel" destination="9gV-3b-7ee" id="5Ie-XD-sAn"/>
                                         </connections>
@@ -226,7 +243,7 @@
                                     <barButtonItem width="40" style="plain" systemItem="fixedSpace" id="q4C-VE-4xQ"/>
                                     <barButtonItem systemItem="add" id="etg-Q2-TcD">
                                         <connections>
-                                            <segue destination="gHj-iT-z5A" kind="presentation" id="ZsD-9F-Or4"/>
+                                            <segue destination="gHj-iT-z5A" kind="presentation" identifier="AddItemSegue" id="ZsD-9F-Or4"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Ept-Qu-ELH"/>
@@ -506,5 +523,6 @@
     </scenes>
     <resources>
         <image name="chevron" width="22" height="10.5"/>
+        <image name="n-icon" width="18" height="22"/>
     </resources>
 </document>
